// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageDataloaderService load should load many 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
          "321",
        ],
      },
    },
  },
]
`;

exports[`PageDataloaderService load should load one 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
        ],
      },
    },
  },
]
`;

exports[`PageDataloaderService should prime 1`] = `
[
  "123",
  {},
]
`;
